fix overflow issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,11 +31,17 @@ body {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
   cursor: row-resize;
 }
-
 /* code editor */
+.cm-theme {
+  height: 100%;
+  .cm-editor {
+    height: 100%;
+  }
+}
 .cm-scroller,
 .cm-gutters {
   background-color: #282828 !important;
+  height: 100%;
 }
 .cm-focused {
   outline: none !important;
